# BezierToolkitCxx

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CubicBezierCurve.cpp  CubicBezierCurve.h  LinSpace.cpp  LinSpace.h  LineSegment.cpp  LineSegment.h  QuadraticBezierCurve.cpp  QuadraticBezierCurve.h  Range.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  benchmark_main.cpp  main.cpp  math.h  test_main.cpp
